# coding-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  main.yml
docs/: API_USAGE.md  CLI_USAGE.md  MULTI_PLATFORM_PLAN.md  architecture.md  coding_agent.clients.rst  coding_agent.rst  coding_agent.tools.rst  conf.py  index.rst  modules.rst
docs/guide/: adding-providers.md  agent-architecture.md  cli-reference.md  configuration.md  custom-tools.md  getting-started.md  human-in-the-loop.md  index.md  llm-providers.md  security.md  streaming.md  tools-overview.md
examples/: programmatic_usage.py
src/coding_agent/: __init__.py  agent.py  config.py  exceptions.py  logging.py  main.py  prompts.py  stream_handler.py  types.py  utils.py  visualizer.py
src/coding_agent/api/: __init__.py  schemas.py  server.py  sessions.py  websocket.py
src/coding_agent/clients/: __init__.py  anthropic.py  base.py  factory.py  google.py  openai.py  openai_compat.py  together.py
src/coding_agent/core/: __init__.py  memory_manager.py  prompt_builder.py  tool_executor.py
src/coding_agent/multi_agent/: __init__.py  prompts.py  supervisor.py  tools.py  worker.py
src/coding_agent/multi_agent/workers/: __init__.py  coder.py  context.py  data_analyst.py  researcher.py  reviewer.py
src/coding_agent/tools/: __init__.py  ask_user.py  base.py  calculator.py  data_analysis.py  filesystem.py  python_repl.py  search.py  security.py  system.py
src/coding_agent/utils/: __init__.py  stream_parser.py
tests/: conftest.py  test_agent.py  test_client_abstraction.py  test_data_analysis_tools.py  test_new_clients.py  test_search_tool.py  test_security.py  test_tools.py  test_types.py
web/: .dockerignore  Dockerfile  nginx.conf  package.json
web/src/: App.tsx  index.css
web/src/api/: client.ts  types.ts
web/src/components/: ChatInput.tsx  ChatMessage.tsx  ConfirmationModal.tsx  InterruptModal.tsx
web/src/hooks/: useAgent.ts
