[project]
name = "coding-agent"
version = "0.1.0"
description = "A coding agent using Together API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "together>=1.3.0",
    "python-dotenv>=1.0.0",
    "openai>=2.9.0",
    "anthropic>=0.75.0",
    "google-genai>=1.0.0",
    "tavily-python>=0.7.13",
    "pyyaml>=6.0.3",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "websockets>=14.0",
]

[project.scripts]
agent = "coding_agent.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.3.0",
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=2.0.0",
    "myst-parser>=2.0.0",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
