[project]
name = "coding-agent"
version = "0.1.0"
description = "A coding agent using Together API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # llm providers
    "together>=1.3.0",
    "openai>=2.9.0",
    "anthropic>=0.75.0",
    "google-genai>=1.0.0",
    # utilities
    "python-dotenv>=1.0.0",
    "tavily-python>=0.7.13",
    "pyyaml>=6.0.3",
    "protobuf>=3.20.0",
    # configuration
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "websockets>=14.0",
]
data = [
    "openpyxl>=3.1.0",
    "matplotlib>=3.8.0",
]
local = [
    # ml dependencies for local_agents (heavy ~5GB)
    "torch>=2.2.0",
    "transformers>=4.40.0",
    "accelerate>=0.29.0",
    "sentence-transformers>=2.7.0",
    "pandas>=2.0.0",
]
all = [
    "coding-agent[api,data,local]",
]

[project.scripts]
agent = "coding_agent.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.3.0",
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=2.0.0",
    "myst-parser>=2.0.0",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
